core/test/org.ebayopensource.vjet.test.core.jstojava/testFiles/org/ebayopensource/dsf/jst/validation/vjo/BugFixes/bad/Bug46681.js
vjo.ctype('org.ebayopensource.dsf.jst.validation.vjo.BugFixes.bad.Bug46681') //< public
.endType();